<resources>
    <string name="app_name">Popular Movie App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_favorite">Favorite Movies</string>
    <string name="title_activity_video">Movie Trailer</string>
    <string name="title_activity_detail">Movie Detail</string>
    <string name="title_activity_review">Movie Reviews</string>

    <string name="TopRated">Highest Rated</string>
    <string name="Popular">Most Popular</string>
    <string name="Favorite">My Favorite</string>

    <!-- Strings related to DetailFragment Activity -->
    <string name="overview_label">Overview</string>
    <string name="release_label">Release Date</string>
    <string name="rating_label">Vote Rating</string>
    <string name="trailer_label">Trailer : </string>
    <string name="review_label">Movie Reviews</string>
    <string name="review_button">Show Reviews</string>

    <string name="Favorite_empty_list">Favorite list is empty!</string>
    <string name="Review_empty">Reviews not available!</string>
    <string name="Network_error">Network Error!</string>
    <string name="No_Internet">Internet Connection Unavailable! Please Turn ON
        Internet and Sweep Down</string>
    <string name="UnFavorite">This movie remove from favorite list!</string>
    <string name="FavoriteMarked">This movie marked as favorite</string>

</resources>
