<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".Activities.MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/High_rated"
            android:orderInCategory="1"
            android:title="@string/TopRated"
            app:showAsAction="never"/>
        <item
            android:id="@+id/most_Popular"
            android:orderInCategory="2"
            android:title="@string/Popular"
            app:showAsAction="never"/>
        <item
            android:id="@+id/favoriteList"
            android:orderInCategory="3"
            android:title="@string/Favorite"
            app:showAsAction="never"/>
    </group>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
