<LinearLayout android:id="@+id/fragment_detail"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#cdcecf"
              android:orientation="vertical"
              tools:context=".Fragments.DetailFragment">

    <ImageView
        android:id="@+id/NoNetwork"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_action_error"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue1">

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#125b5b"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieTitle"
                style="@style/TextBlue"
                android:padding="10dp"
                android:textSize="18dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/accent_material_light"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/moviePoster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/releaseDate"
                            style="@style/TextView_Medium"
                            android:layout_gravity="center"
                            android:textSize="24dp"
                            />

                        <TextView
                            android:id="@+id/rating_Percent"
                            style="@style/TextView_Medium"
                            />

                        <Button
                            android:id="@+id/BTN_favorite"
                            android:layout_width="63dp"
                            android:layout_height="61dp"
                            android:background="@android:drawable/btn_star"
                            android:backgroundTint="#ffcd45"
                            android:backgroundTintMode="multiply"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:animationResolution="@integer/abc_max_action_buttons"
                android:numStars="5"
                android:rating="10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="0dp"
                android:background="#1c8b8b"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/overViewTitle"
                    style="@style/TextView_Medium"
                    android:layout_width="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/overview_label"
                    android:textColor="#e6e9e6"/>

                <TextView
                    android:id="@+id/overViewDetail"
                    style="@style/TextView_Small"
                    android:layout_width="match_parent"
                    android:textColor="@color/White"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                >

                <TextView
                    style="@style/TextView_Medium"
                    android:text="@string/trailer_label"
                    />

                <TextView
                    android:id="@+id/TXT_trailerstatus"
                    style="@style/TextView_Medium"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/BTN_play"
                    android:layout_width="68dp"
                    android:layout_height="60dp"
                    android:background="@android:drawable/ic_media_play"
                    android:backgroundTint="#50ff50"
                    android:backgroundTintMode="multiply"
                    />
                </LinearLayout>

                <Button
                    android:id="@+id/BTN_review"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_button1"
                    android:padding="10dp"
                    android:text="@string/review_button"
                    android:textColor="#faf7f7"
                    android:textSize="14dp"
                    />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
